welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:13: error: value ! is not a member of Boolean
while (croisement!)
                 ^